frontend/src/App.css
body{
  height: 100vh;
}

#SearchBar{
  background-color: #789065;
  position: absolute;
  z-index: 10;
  width: 280px;
  height: 40px;
  left: 90px;
  top: 50px;
}

#SearchBarInner{
  background-color: #789065;
  width: 280px;
  height: 40px;
}

#searchmag{
  position: absolute;
  top: 8px;
  right: 10px;
  font-size: 22px;
}

#Searchbox{
  height: 24px;
  width: 230px;
  margin-left: 3px;
  margin-top: 5px;
  margin-bottom: 3px;
}

div.mapboxgl-ctrl-attrib-inner{
  color: white;
  text-decoration: none;
  text-align: center;
  display: none;
}

.mapboxgl-ctrl-attrib-button{
  display: none;
}

div.mapboxgl-children{
  display: none;
  height: 0%;
}

#NavBar{
  height: 60px;
  width: 100%;
  background-color: #AAB99E;
  position: fixed;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  z-index:10
}

nav{
  position: fixed;
  right: 0;
  height: 168px;
  width: 300px;
  top: 60px;
  display: flex;
  flex-direction: column;
  background-color: #AAB99E;
  color: white;
  font-family: "Anton", sans-serif;
}

.NavLink{
  text-decoration: none;
  text-align: center;
  padding: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
}

#Map1{
  height: 600px;
  width: 100vw;
  position:relative;
  top: 60px;
}

.App{
  height: 100vh;
  background-color: #789065;
}

#Logo{
  font-family: "Koulen", sans-serif;
  font-weight: 400;
  font-style: normal;
  color: white;
  font-size: 32px;
  padding: 12px;
  width: 300px;
  float: left;
}

#burger{
  color: white;
  font-size: 44px;
  padding: 5px;
  float:right;
}

#close{
  color: white;
  font-size: 44px;
  padding: 5px;
  float:right;
}

